--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,16 +4,23 @@
 
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="18" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+        android:name="com.e.baize.SnookerScoreboard"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
         android:screenOrientation="portrait"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-        android:usesCleartextTraffic="true">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true" >
+
+        <activity
+            android:name=".OptionsActivity"
+            android:exported="true" />
         <activity
             android:name=".ScoreboardActivity"
             android:screenOrientation="portrait" />
@@ -25,6 +32,9 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".StatsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".SavedGamesActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
