--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.3"
 
     defaultConfig {
         applicationId "com.e.baize"
@@ -47,4 +46,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.android.support:appcompat-v7:29.0.0'
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
+}
+task wrapper(type: Wrapper) {
+    gradleVersion = '6.7.1'
 }
