--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,17 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "com.e.baize"
-        minSdkVersion 25
-        targetSdkVersion 31
+        minSdk 29
+        targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        versionCode 5_1
-        versionName '5.1'
-        versionNameSuffix '5.1'
+        versionCode 5_2
+        versionName '5.2'
+        versionNameSuffix '5.2'
     }
 
     buildTypes {
@@ -44,7 +44,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'com.android.support:appcompat-v7:31.0.0'
+    implementation 'com.android.support:appcompat-v7:33.0.0'
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
 }
 task wrapper(type: Wrapper) {
